Fix add task btn not showing after inital task added

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -93,18 +93,20 @@ height: 100vh;
 #sideNav{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 20px 8px;
   width: 320px;
-  height: 100vh;
-  background-color: var(--gray10)
+  height: 92vh;
+  background-color: var(--gray10);
+  border-radius: 8px;
+  margin: 16px 16px;
 	}
 
 	.sideNavTodoBtn {
 		width: 100%;
 		height: 40px;
-		font-weight: 600;
+		font-weight: 500;
 		gap: 16px;
 		padding: 32px 20px;
 		margin-bottom: 20px;
@@ -140,7 +142,7 @@ height: 100vh;
 		flex-direction: row;
 		border: none;
 		cursor: pointer;
-		margin-bottom: 40px;
+		margin-bottom: 10px;
 		box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 		border: 0.5px solid #C7EA1A;
 	}
@@ -156,7 +158,7 @@ height: 100vh;
 	#dotted-lines {
 		width: 92%;
 		height: 0px;
-		border: 0.4px dashed #575659;
+		border: 0.4px solid #2A292F;
 	}
 
 	/* area */
@@ -167,14 +169,14 @@ height: 100vh;
 	 justify-content: start;
 	 align-items: center;
 	 margin-top: 24px;
-	 height: 32px;
 	 width: 100%;
 	}
 
 	#folder-area {
+		margin-top: 20px;
 		display: flex;
 		flex-direction: column;
-		height: 50vh;
+		height: 80%;
 		width: 100%;
 		overflow: scroll;
 }
